fix_bug_GoBack()

--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -49,7 +49,7 @@
             <!-- Botones -->
             <div class="row mt-2 text-center">
               <div class="col-6">
-                <button onclick="location.href='http://localhost:4200/alumnos'" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
+                <button (click)="volver()" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
               </div>
               <div class="col-6">
                 <button [disabled]="form.invalid" type="submit" class="btn btn-light btn-sm m-2">Aceptar</button>
