--- a/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center mt-3">
   <div class="card text-white bg-primary mb-3" style="max-width: 600px;">
-    <div class="card-header text-center">Alumno Encontrado</div>
+    <div class="card-header text-center">Alumno</div>
     <div class="card-body">
       <!-- Campos del alumno -->
       <div class="row mb-3" *ngIf="alumno"> <!-- Asegúrate de que alumno no sea null -->
