--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -46,24 +46,9 @@
             <td class="text-center align-middle">{{ alumno.apellido }}</td>
             <td class="text-center align-middle">{{ alumno.plan }}</td>
             <td class="text-center align-middle">
-              <button
-                routerLink="/editar_alumno/{{ alumno.id }}"
-                type="button"
-                class="btn btn-primary btn-sm m-1">
-                Editar
-              </button>
-              <button
-                (click)="deleteAlumno(alumno.id!)"
-                type="button"
-                class="btn btn-danger btn-sm m-1">
-                Eliminar
-              </button>
-              <button
-                (click)="verAlumno(alumno)"
-                type="button"
-                class="btn btn-info btn-sm m-1">
-                Ver Info
-              </button>
+              <button routerLink="/editar_alumno/{{ alumno.id }}" type="button" class="btn btn-primary btn-sm m-1"> Editar </button>
+              <button (click)="deleteAlumno(alumno.id!)" type="button" class="btn btn-danger btn-sm m-1"> Eliminar </button>
+              <button (click)="verAlumno(alumno)" type="button" class="btn btn-info btn-sm m-1"> Ver Info </button>
             </td>
           </tr>
         </tbody>
