update_function_addInsc

--- a/FrontEnd/SysAcad/src/app/components/busqueda/add-inscripcion/add-inscripcion.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/add-inscripcion/add-inscripcion.component.html
@@ -1,24 +1,12 @@
 <div class="container">
-    <div class="card text-white bg-primary mb-3 mt-3">
-      <div class="d-flex justify-content-between align-items-center card-header">
-        <h4 class="m-3">Agregar Inscripción</h4>
+  <div class="card text-white bg-primary mb-3 mt-3">
+    <div class="d-flex justify-content-between align-items-center card-header">
+      <h4 class="m-3">Agregar Inscripción</h4>
+    </div>
 
-      </div>
-  
-      <div class="card-body">
-        <!-- Selección de Modalidad -->
-        <form [formGroup]="filtroForm" class="d-flex justify-content-center mt-2 mb-2">
-          <div class="d-flex align-items-center">
-            <label for="modalidad" class="form-label mb-1 mt-0 mr-2">Selecciona una Modalidad:</label>
-            <select formControlName="modalidad" id="modalidad" class="form-select text-center" style="width: 200px;">
-              <option value="">Todos</option>
-              <option *ngFor="let modalidad of modalidadesDisponibles" [value]="modalidad">
-                {{ modalidad }}
-              </option>
-            </select>
-          </div>
-        </form>
-  
+    <div class="card-body">
+      <!-- Agrega el formGroup aquí -->
+      <form [formGroup]="filtroForm">
         <!-- Tabla de Materias -->
         <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
           <table class="table table-secondary text-center" style="position: relative;">
@@ -33,7 +21,7 @@
             <tbody>
               <tr *ngFor="let materia of materiasFiltradas" class="table-active">
                 <td class="text-center align-middle">
-                  <input type="radio" name="materiaSeleccionada" [value]="materia.id" [(ngModel)]="materiaSeleccionada">
+                  <input type="radio" formControlName="materiaSeleccionada" [value]="materia.id">
                 </td>
                 <td class="text-center align-middle">{{ materia.nombre }}</td>
                 <td class="text-center align-middle">{{ materia.horas_anuales }}</td>
@@ -42,24 +30,23 @@
             </tbody>
           </table>
         </div>
-  
+
         <!-- Input de Fecha de Inscripción -->
         <div class="mb-2 mt-3">
           <label for="fechaN" class="form-label mb-0">Fecha de Inscripción:</label>
           <input formControlName="fechaN" type="date" id="fechaN" class="form-control">
         </div>
-  
-        <!-- Botones de acción -->
-        <div class="row mt-2 text-center">
-            <div class="col-6">
-            <button type="button" class="btn btn-secondary btn-sm m-2" (click)="goBack()"> Volver</button>
-            </div>
-           <div class="col-6"> 
-            <button type="submit" class="btn btn-light btn-sm m-2"> Inscribirse </button>
-           </div> 
+      </form>
 
+      <!-- Botones de acción -->
+      <div class="row mt-2 text-center">
+        <div class="col-6">
+          <button type="button" class="btn btn-secondary btn-sm m-2" (click)="goBack()"> Volver</button>
+        </div>
+        <div class="col-6">
+          <button type="submit" class="btn btn-light btn-sm m-2" (click)="crearInscripcion()"> Inscribirse </button>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
