--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -4,6 +4,9 @@
       <h4 class="m-3">Listado de Materias</h4>
       <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_materia'">Agregar Materia</button>
     </div>
+    <div *ngIf="form.errors?.['serverError']" class="alert alert-danger" role="alert">
+      {{ form.errors?.['serverError'] }}
+    </div>
 
     <!-- Filtro de modalidad -->
     <div>
