Fix_Bug_Fecha_Front

--- a/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
@@ -21,7 +21,7 @@
 
         <div class="col-md-6">
           <label for="fechaN" class="form-label text-white mb-0">Fecha de Nacimiento</label>
-          <input type="text" id="fechaN" [value]="alumno.fechaN" readonly class="form-control mt-0 mb-3">
+          <input type="text" id="fechaN" [value]="alumno.fecha_n" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
