Revert "Fix_Bug_Fecha_Front"
This reverts commit b705652d89a5c66a3e9772d79d75a8ad2d3015f0.

--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -30,7 +30,7 @@
   
             <!-- Fecha de nacimiento -->
             <div class="mb-2">
-              <label for="fecha_n" class="form-label">Fecha de Nacimiento:</label>
+              <label for="fechaN" class="form-label">Fecha de Nacimiento:</label>
               <input formControlName="fechaN" type="date" id="fechaN" class="form-control">
             </div>
   
