--- a/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/add-update-alumno/add-update-alumno.component.html
@@ -30,8 +30,8 @@
   
             <!-- Fecha de nacimiento -->
             <div class="mb-2">
-              <label for="fechaN" class="form-label">Fecha de Nacimiento:</label>
-              <input formControlName="fechaN" type="date" id="fechaN" class="form-control">
+              <label for="fecha_n" class="form-label">Fecha de Nacimiento:</label>
+              <input formControlName="fecha_n" type="date" id="fecha_n" class="form-control">
             </div>
   
             <!-- Plan -->
