--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -15,7 +15,7 @@
                     
                     <div class="mb-3">
                         <label for="horas_anuales" class="form-label mb-1">Horas Anuales:</label>
-                        <input id="horas_anuales" formControlName="horas_anuales" type="text" class="form-control" placeholder="Ingrese la cantidad de horas anuales">
+                        <input id="horas_anuales" formControlName="horas_anuales" type="number" class="form-control" placeholder="Ingrese la cantidad de horas anuales">
                     </div>
                     <!-- Horas anuales -->
                     
