--- a/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/listado-i/listado-i.component.html
@@ -19,7 +19,7 @@
             <td class="text-center align-middle">{{ inscripcion.fecha }}</td>
             <td class="text-center align-middle">{{ inscripcion.nombreMateria || 'Cargando...' }}</td>
             <td class="text-center align-middle">
-              <button type="button" class="btn btn-danger btn-sm m-1"> Eliminar </button>
+              <button type="button" (click)="deleteInscripcion(inscripcion.id!)" class="btn btn-danger btn-sm m-1"> Eliminar </button>
             </td>
           </tr>
         </tbody>
