--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -4,9 +4,12 @@
       <h4 class="m-3">Listado de Materias</h4>
       <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_materia'">Agregar Materia</button>
     </div>
-    <!-- <div *ngIf="form.errors?.['serverError']" class="alert alert-danger" role="alert">
-      {{ form.errors?.['serverError'] }}
-    </div> -->
+    <div class="d-flex justify-content-center">
+      <div *ngIf="errorMessage" class="alert alert-danger mb-2 mt-2" role="alert">
+        {{ errorMessage }}
+      </div>
+    </div>
+    
 
     <!-- Filtro de modalidad -->
     <div>
