--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,9 @@
       <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
     </a>
     <!-- Botón del menú para pantallas pequeñas -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Cambiamos el icono por texto -->
+      <span>Menu</span>
     </button>
     
     <div class="collapse navbar-collapse" id="navbarColor01">
