--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       <span>Menu</span>
     </button>
     
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse text-center mt-2" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <!-- Botón Alumnos -->
