--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="card text-white bg-primary mb-3 mt-3">
-    <div class="d-flex justify-content-between align-items-center card-header">
-      <h4 class="m-3">Listado de Alumnos</h4>
+  <div class="card text-white bg-primary mb-3 mt-3 w-75 mx-auto"> <!-- Ajustar el ancho de la tarjeta -->
+    <div class="card-header d-flex justify-content-between align-items-center p-2"> <!-- Flexbox para alinear el contenido -->
+      <h4 class="m-0" style="font-size: 1.2rem;">Listado de Alumnos</h4> <!-- Reducir tamaño de fuente -->
       <button
         type="button"
         class="btn btn-light btn-sm m-2"
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Filtro por plan usando formControlName -->
-     <div>
+    <div>
       <form [formGroup]="filtroForm" class="d-flex justify-content-center mt-2 mb-2">
         <div class="d-flex align-items-center">
           <label for="plan" class="form-label mb-1 mt-0 mr-2">Selecciona un Plan:</label>
@@ -23,12 +23,9 @@
           </select>
         </div>
       </form>
-     </div>
+    </div>
     
-    
-    
-
-     <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+    <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
       <table class="table table-secondary text-center" style="position: relative;">
         <thead style="position: sticky; top: 0; background-color: #444; z-index: 1;">
           <tr>
