--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -4,12 +4,12 @@
       <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
     </a>
     <!-- Botón del menú para pantallas pequeñas -->
-    <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="btn btn-light rounded-3 me-2 mb-2 mb-lg-0 ml-2 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <!-- Cambiamos el icono por texto -->
       <span>Menu</span>
     </button>
     
-    <div class="collapse navbar-collapse text-center mt-2" id="navbarColor01">
+    <div class="collapse navbar-collapse text-center " id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <!-- Botón Alumnos -->
