--- a/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/add-update-materia/add-update-materia.component.html
@@ -7,20 +7,14 @@
                     {{ form.errors?.['serverError'] }}
                   </div>
                 <form [formGroup]="form" (ngSubmit)="addMateria()">
-                    <!-- Nombre -->
                      <div class="mb-2">
                         <label for="nombre" class="form-label mb-1">Nombre:</label>
                         <input id="nombre" formControlName="nombre" type="text" class="form-control">
                      </div>
-                    
                     <div class="mb-3">
                         <label for="horas_anuales" class="form-label mb-1">Horas Anuales:</label>
                         <input id="horas_anuales" formControlName="horas_anuales" type="number" class="form-control" placeholder="Ingrese la cantidad de horas anuales">
                     </div>
-                    <!-- Horas anuales -->
-                    
-  
-                    <!-- Modalidad -->
                     <div class="d-flex justify-content-center align-items-center mb-3">
                         <label for="modalidad" class="form-label mr-2">Modalidad:</label>
                         <select id="modalidad" formControlName="modalidad" class="form-select">
@@ -28,11 +22,9 @@
                             <option>Cuatrimestral</option>
                         </select>
                     </div>
-  
-                    <!-- Botones -->
                     <div class="row mt-2 text-center">
                         <div class="col-6">
-                            <button onclick="location.href='http://localhost:4200/materias'" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
+                            <button (click)="volver()" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
                         </div>
                         <div class="col-6">
                             <button [disabled]="form.invalid" type="submit" class="btn btn-light btn-sm m-2">Aceptar</button>
