--- a/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Mat/materias/materias.component.html
@@ -1,17 +1,14 @@
 <div class="container">
-  <div class="card text-white bg-primary mb-3 mt-3 w-75 mx-auto"> <!-- Ajustar el ancho de la tarjeta -->
-    <div class="d-flex justify-content-between align-items-center card-header p-2"> <!-- Flexbox para alinear el contenido -->
-      <h4 class="m-0" style="font-size: 1.2rem;">Listado de Materias</h4> <!-- Reducir tamaño de fuente -->
-      <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_materia'">Agregar Materia</button>
+  <div class="card text-white bg-primary mb-3 mt-3 w-75 mx-auto">
+    <div class="d-flex justify-content-between align-items-center card-header p-2">
+      <h4 class="m-0" style="font-size: 1.2rem;">Listado de Materias</h4>
+      <button type="button" class="btn btn-light btn-sm m-2" (click)="goadd()">Agregar Materia</button>
     </div>
-
     <div class="d-flex justify-content-center">
       <div *ngIf="errorMessage" class="alert alert-danger mb-2 mt-2" role="alert">
         {{ errorMessage }}
       </div>
     </div>
-
-    <!-- Filtro de modalidad -->
     <div>
       <form [formGroup]="filtroForm" class="d-flex justify-content-center mt-2 mb-2">
         <div class="d-flex align-items-center">
@@ -25,8 +22,6 @@
         </div>
       </form>
     </div>
-
-    <!-- Contenedor de tabla con scroll y encabezado fijo -->
     <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
       <table class="table table-secondary text-center" style="position: relative;">
         <thead style="position: sticky; top: 0; background-color: #444; z-index: 1;">
