--- a/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
@@ -1,23 +1,17 @@
 <div class="container-fluid mt-3">
-    <div class="card text-white bg-primary mb-3 w-50 mx-auto"> <!-- Ajuste de ancho y centrado -->
-      <div class="card-header p-2 text-center"> <!-- Centrando el texto del encabezado -->
-        <h4 class="m-2" style="font-size: 1.2rem;">Buscar Alumno</h4> <!-- Reducir tamaño de fuente -->
+    <div class="card text-white bg-primary mb-3 w-50 mx-auto">
+      <div class="card-header p-2 text-center"> 
+        <h4 class="m-2" style="font-size: 1.2rem;">Buscar Alumno</h4> 
       </div>
-  
-      <div class="card-body p-3"> <!-- Reducir padding de card-body -->
+      <div class="card-body p-3">
         <form [formGroup]="form" (ngSubmit)="buscarAlumno()" class="text-center">
-          <!-- Mensaje de error -->
           <div *ngIf="errorMessage" class="alert alert-danger mt-3">
             {{ mensajeError }}
           </div>
-  
-          <!-- Legajo -->
           <div class="mb-3">
             <label for="legajo" class="form-label">Ingrese el Legajo:</label>
             <input formControlName="legajo" type="number" class="form-control mt-2 w-50 mx-auto" id="legajo" placeholder="Legajo">
           </div>
-  
-          <!-- Botones -->
           <div class="d-flex justify-content-center mt-2">
             <button type="submit" class="btn btn-light btn-sm m-2">Buscar Alumno</button>
           </div>
