--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,17 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand me-4" href="/">
+    <a class="navbar-brand me-4" (click)="goHome()">
       <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
     </a>
-    <!-- Botón del menú para pantallas pequeñas -->
     <button class="btn btn-light rounded-3 me-2 mb-2 mb-lg-0 ml-2 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <!-- Cambiamos el icono por texto -->
       <span>Menu</span>
     </button>
-    
     <div class="collapse navbar-collapse text-center " id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <!-- Botón Alumnos -->
-          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/alumnos'">Alumnos</button>
-          <!-- Botón Materias -->
-          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/materias'">Materias</button>
-          <!-- Botón Inscirpciones-->
-          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" onclick="location.href='http://localhost:4200/buscar'">Buscar</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
 
         </li>
       </ul>
