--- a/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/buscador/buscador.component.html
@@ -1,22 +1,21 @@
-<div class="container-fluid mt-3">
-    <div class="card text-white bg-primary mb-3 w-50 mx-auto">
-      <div class="card-header p-2 text-center"> 
-        <h4 class="m-2" style="font-size: 1.2rem;">Buscar Alumno</h4> 
-      </div>
-      <div class="card-body p-3">
-        <form [formGroup]="form" (ngSubmit)="buscarAlumno()" class="text-center">
-          <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-            {{ mensajeError }}
-          </div>
-          <div class="mb-3">
-            <label for="legajo" class="form-label">Ingrese el Legajo:</label>
-            <input formControlName="legajo" type="number" class="form-control mt-2 w-50 mx-auto" id="legajo" placeholder="Legajo">
-          </div>
-          <div class="d-flex justify-content-center mt-2">
-            <button type="submit" class="btn btn-light btn-sm m-2">Buscar Alumno</button>
-          </div>
-        </form>
-      </div>
+<div class="container mt-3">
+  <div class="card text-white bg-primary mb-3 mx-auto rounded" style="max-width: 600px; border-radius: 10px;">
+    <div class="card-header p-2 text-center" style="background-color: #333;">
+      <h4 class="m-2" style="font-size: 1.4rem;">Buscar Alumno</h4>
+    </div>
+    <div class="card-body p-4 bg-primary rounded">
+      <form [formGroup]="form" (ngSubmit)="buscarAlumno()" class="text-center">
+        <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+          {{ mensajeError }}
+        </div>
+        <div class="mb-4">
+          <label for="legajo" class="form-label">Ingrese el Legajo:</label>
+          <input formControlName="legajo" type="number" class="form-control mt-2 w-100 w-md-75 mx-auto" id="legajo" placeholder="Legajo">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-light btn-sm w-100 w-md-50" style="border-radius: 5px;">Buscar Alumno</button>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
