--- a/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
@@ -26,6 +26,10 @@
               <label for="fecha_n" class="form-label">Fecha de Nacimiento:</label>
               <input formControlName="fecha_n" type="date" id="fecha_n" class="form-control">
             </div>
+            <div class = "mb-2">
+              <label for="ususario" class = "from-label">Usuario:</label>
+              <input formControlName="usuario" type="text" id="usuario" class="form-control">
+            </div>
             <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
               <label for="plan" class="form-label mr-2">Plan:</label>
               <select formControlName="plan" id="plan" class="form-select">
