--- a/FrontEnd/SysAcad/src/app/auth/login/login.component.html
+++ b/FrontEnd/SysAcad/src/app/auth/login/login.component.html
@@ -1,28 +1,27 @@
 <div class="container">
-    <div class="card text-white bg-primary mb-3 mt-5 w-50 mx-auto">
-      <div class="card-header d-flex justify-content-center align-items-center p-2">
-        <h4 class="m-0" style="font-size: 1.2rem;">Inicio de Sesión</h4>
-      </div>
-      <div class="card-body">
-        <form class="d-flex flex-column align-items-center">
-          <div class="form-group w-75 mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" class="form-control" placeholder="Ingresa tu email">
-          </div>
-          <div class="form-group w-75 mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" id="password" class="form-control" placeholder="Ingresa tu contraseña">
-          </div>
-          <button type="button" class="btn btn-light btn-sm w-50">Iniciar Sesión</button>
-        </form>
-      </div>
+  <div class="card text-white bg-primary mb-3 mt-5 w-50 mx-auto">
+    <div class="card-header d-flex justify-content-center align-items-center p-2">
+      <h4 class="m-0" style="font-size: 1.2rem;">Inicio de Sesión</h4>
     </div>
-  
-    <!-- Recuadro de registro con misma estética -->
-    <div class="card text-white bg-primary mb-3 w-50 mx-auto">
-      <div class="card-body text-center">
-        <span>Si no estás registrado &rarr; <a href="#" class="text-white">Registrar</a></span>
-      </div>
+    <div class="card-body">
+      <form class="d-flex flex-column align-items-center" (ngSubmit)="login()">
+        <div class="form-group w-75 mb-3">
+          <label for="usuario" class="form-label">Usuario</label>
+          <input type="text" id="usuario" class="form-control" placeholder="Ingresa tu usuario" [(ngModel)]="usuario" name="usuario" required>
+        </div>
+        <div class="form-group w-75 mb-3">
+          <label for="contraseña" class="form-label">Contraseña</label>
+          <input type="password" id="contraseña" class="form-control" placeholder="Ingresa tu contraseña" [(ngModel)]="contraseña" name="contraseña" required>
+        </div>
+        <button type="submit" class="btn btn-light btn-sm w-50">Iniciar Sesión</button>
+      </form>
     </div>
   </div>
-  
+
+  <!-- Recuadro de registro con misma estética -->
+  <div class="card text-white bg-primary mb-3 w-50 mx-auto">
+    <div class="card-body text-center">
+      <span>Si no estás registrado &rarr; <a href="#" class="text-white">Registrar</a></span>
+    </div>
+  </div>
+</div>
