first_play_auth

--- a/FrontEnd/SysAcad/src/app/auth/login/login.component.html
+++ b/FrontEnd/SysAcad/src/app/auth/login/login.component.html
@@ -10,8 +10,8 @@
           <input type="text" id="usuario" class="form-control" placeholder="Ingresa tu usuario" [(ngModel)]="usuario" name="usuario" required>
         </div>
         <div class="form-group w-75 mb-3">
-          <label for="contraseña" class="form-label">Contraseña</label>
-          <input type="password" id="contraseña" class="form-control" placeholder="Ingresa tu contraseña" [(ngModel)]="contraseña" name="contraseña" required>
+          <label for="password" class="form-label">password</label>
+          <input type="password" id="password" class="form-control" placeholder="Ingresa tu contraseña" [(ngModel)]="password" name="password" required>
         </div>
         <button type="submit" class="btn btn-light btn-sm w-50">Iniciar Sesión</button>
       </form>
