--- a/FrontEnd/SysAcad/src/app/components/administrador/busqueda/buscador/buscador.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/busqueda/buscador/buscador.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-3">
-  <div class="card text-white bg-primary mb-3 mx-auto rounded" style="max-width: 600px; border-radius: 10px;">
+  <div>
+    <app-adminbar></app-adminbar> 
+  </div>
+  <div class="card text-white bg-primary mb-3 mx-auto rounded mt-3" style="max-width: 600px; border-radius: 10px;">
     <div class="card-header p-2 text-center" style="background-color: #333;">
       <h4 class="m-2" style="font-size: 1.4rem;">Buscar Alumno</h4>
     </div>
