--- a/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
@@ -1,4 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center mt-3">
+  <div>
+    <app-adminbar></app-adminbar> 
+  </div>
   <div class="card text-white bg-primary mb-3" style="max-width: 600px;">
     <div class="card-header text-center">Alumno</div>
     <div class="card-body">
