--- a/FrontEnd/SysAcad/src/app/components/administrador/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Mat/materias/materias.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div>
+    <app-adminbar></app-adminbar> 
+  </div>
   <div class="card text-white bg-primary mb-3 mt-3 w-100 mx-auto">
     <div class="d-flex justify-content-between align-items-center card-header p-2 flex-wrap">
       <h4 class="m-0" style="font-size: 1.2rem;">Listado de Materias</h4>
@@ -40,7 +43,7 @@
               <td class="text-center align-middle">{{ materia.horas_anuales }}</td>
               <td class="text-center align-middle">{{ materia.modalidad }}</td>
               <td class="text-center align-middle">
-                <button routerLink="/editar_materia/{{ materia.id }}" type="button" class="btn btn-primary btn-sm m-1">Editar</button>
+                <button routerLink="/admin/editar_materia/{{ materia.id }}" type="button" class="btn btn-primary btn-sm m-1">Editar</button>
                 <button (click)="deleteMateria(materia.id!)" type="button" class="btn btn-danger btn-sm m-1">Eliminar</button>
               </td>
             </tr>
