--- a/FrontEnd/SysAcad/src/app/components/administrador/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Alum/alumnos/alumnos.component.html
@@ -11,8 +11,8 @@
     <div class="card-body">
       <form [formGroup]="filtroForm" class="d-flex flex-column flex-md-row justify-content-center mb-3">
         <div class="d-flex align-items-center mb-2 mb-md-0">
-          <label for="plan" class="form-label mr-2 mb-0">Selecciona un Plan:</label>
-          <select formControlName="plan" id="plan" class="form-select text-center w-100 w-md-auto" style="min-width: 200px;">
+          <label for="plan" class="form-label me-3 mb-0">Selecciona un Plan:</label>
+          <select formControlName="plan" id="plan" class="form-select w-50" style="max-width: 250px;">
             <option value="">Todos</option>
             <option *ngFor="let plan of planesDisponibles" [value]="plan">
               {{ plan }}
@@ -39,9 +39,24 @@
               <td class="text-center align-middle">{{ alumno.apellido }}</td>
               <td class="text-center align-middle">{{ alumno.plan }}</td>
               <td class="text-center align-middle">
-                <button routerLink="/admin/editar_alumno/{{ alumno.id }}" type="button" class="btn btn-primary btn-sm m-1"> Editar </button>
-                <button (click)="deleteAlumno(alumno.id!)" type="button" class="btn btn-danger btn-sm m-1"> Eliminar </button>
-                <button (click)="verAlumno(alumno)" type="button" class="btn btn-info btn-sm m-1"> Ver Info </button>
+                <!-- Tres puntos para pantallas pequeñas -->
+                <div class="dropdown d-block d-sm-none">
+                  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" [routerLink]="'/admin/editar_alumno/' + alumno.id">Editar</a></li>
+                    <li><a class="dropdown-item text-danger" (click)="deleteAlumno(alumno.id!)">Eliminar</a></li>
+                    <li><a class="dropdown-item" (click)="verAlumno(alumno)">Ver Info</a></li>
+                  </ul>
+                </div>
+          
+                <!-- Botones para pantallas grandes -->
+                <div class="d-none d-sm-block">
+                  <button routerLink="/admin/editar_alumno/{{ alumno.id }}" type="button" class="btn btn-primary btn-sm m-1">Editar</button>
+                  <button (click)="deleteAlumno(alumno.id!)" type="button" class="btn btn-danger btn-sm m-1">Eliminar</button>
+                  <button (click)="verAlumno(alumno)" type="button" class="btn btn-info btn-sm m-1">Ver Info</button>
+                </div>
               </td>
             </tr>
           </tbody>
