--- a/FrontEnd/SysAcad/src/app/components/administrador/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Alum/alumnos/alumnos.component.html
@@ -1,7 +1,4 @@
 <div class="container">
-  <div>
-    <app-adminbar></app-adminbar> 
-  </div>
   <div class="card text-white bg-primary mb-3 mt-3 w-100 mx-auto">
     <div class="card-header d-flex justify-content-between align-items-center p-2 flex-wrap">
       <h4 class="m-0" style="font-size: 1.2rem;">Listado de Alumnos</h4>
@@ -12,7 +9,7 @@
       <form [formGroup]="filtroForm" class="d-flex flex-column flex-md-row justify-content-center mb-3">
         <div class="d-flex align-items-center mb-2 mb-md-0">
           <label for="plan" class="form-label me-3 mb-0">Selecciona un Plan:</label>
-          <select formControlName="plan" id="plan" class="form-select w-50" style="max-width: 250px;">
+          <select formControlName="plan" id="plan" class="form-select w-50 text-center" style="max-width: 250px;">
             <option value="">Todos</option>
             <option *ngFor="let plan of planesDisponibles" [value]="plan">
               {{ plan }}
@@ -39,7 +36,7 @@
               <td class="text-center align-middle">{{ alumno.apellido }}</td>
               <td class="text-center align-middle">{{ alumno.plan }}</td>
               <td class="text-center align-middle">
-                <!-- Tres puntos para pantallas pequeñas -->
+                <!-- Tres puntos para pantallas chicas -->
                 <div class="dropdown d-block d-sm-none">
                   <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-three-dots-vertical"></i>
