--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -3,15 +3,21 @@
     <a class="navbar-brand me-4" (click)="goHome()">
       <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
     </a>
-    <div class="mt-3 justify-content-center text-center">
-      <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
-      <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
-      <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAdmins()">Administradores</button>
-      <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
+    <div class="mt-3 justify-content-center text-center"> 
     </div>
     <button class="btn btn-light rounded-3 me-2 mb-2 mb-lg-0 ml-2 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span>Menu</span>
     </button>
+    <div class="collapse navbar-collapse text-center " id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item" *ngIf="isAdmin">
+        <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
+        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
+        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAdmins()">Administradores</button>
+        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
+        </li>
+      </ul>
+    </div>
   </div>
 
 </nav>
