--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     </button>
 
     <!-- Menú colapsable -->
-    <div class="collapse navbar-collapse text-center" id="navbarColor01">
+    <div class="collapse navbar-collapse text-center d-flex justify-content-between" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <!-- Opciones para admin -->
         <li class="nav-item" *ngIf="isAdmin">
