almost-stable version
problemas con las materias (solo user: alumno)

--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
 
 
       <!-- Info del usuario en dropdown: imagen + nombre + apellido -->
-      <div class="dropdown">
+      <div class="dropdown" *ngIf = "rol">
         <button
           class="btn btn-primary dropdown-toggle d-flex align-items-center gap-2"
           type="button"
