--- a/FrontEnd/SysAcad/src/app/components/alumnos/informacion/informacion.component.html
+++ b/FrontEnd/SysAcad/src/app/components/alumnos/informacion/informacion.component.html
@@ -32,8 +32,7 @@
           <input type="text" id="plan" [value]="alumno.plan" readonly class="form-control mt-0 mb-3">
         </div>
       </div>
-      <div class="d-flex justify-content-between mt-3">
-        <button class="btn btn-secondary" (click)="goBack()">Volver</button>
+      <div class="d-flex justify-content-center mt-3">
         <div>
           <button (click)="verInscripciones(alumno?.id)" class="btn btn-light ml-2">Ver inscripciones</button>
         </div>
